output aligns correctly

--- a/client/styles/slide.styl
+++ b/client/styles/slide.styl
@@ -17,16 +17,17 @@
     margin: 20px 0 0 220px
     min-height: 400px
     position: relative
-    .ace-editor, .ace-output 
+    .ace-editor, .ace-output, #ace-editor-css, #ace-editor-html, .editors
       width: 48%
       display: inline-block
       height: 100%
       min-height: 400px
       vertical-align: top
-    .ace-editor
       margin-right: 20px
+    .ace-editor
       background: #000
     .ace-output
+      margin-right: 0
       border: 4px solid black
 
 .slide
